# hft-tinkoff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_commands.txt
hft_library/: CMakeLists.txt
hft_library/exe/: CMakeLists.txt  grid_trading.cpp  main.cpp  market_making.cpp  test_tinkoff.cpp  test_yaml.cpp
hft_library/include/: config.h  constants.h  runner.h  strategy.h
hft_library/include/connector/: market.h  user.h  utils.h
hft_library/src/: CMakeLists.txt  config.cpp  runner.cpp  strategy.cpp
hft_library/src/connector/: market.cpp  user.cpp  utils.cpp
include/: config.h  constants.h
scripts/: find_class_codes.py  find_figi.py  find_instruments_to_trade.py  requirements.txt  utils.py
scripts/common/: cancel_all.py  find_class_codes.py  find_figi.py  find_instruments_to_trade.py  utils.py
scripts/research/: load_logs.ipynb  load_trades.py
scripts/server/: debug_server_bot.py  install_commands.txt  launch_server.py  temp_bot.py
scripts/strategy_utils/: cancel_all.py  find_class_codes.py  find_figi.py  find_instruments_to_trade.py
scripts/telegram-bot/: bot.py  test_bot.py
src/: main.cpp
test/: CMakeLists.txt  main.cpp  test_tinkoff.cpp  test_yaml.cpp
